Fixed the spacing between mdm-folders tree and content above

--- a/src/style/_tree.scss
+++ b/src/style/_tree.scss
@@ -102,7 +102,7 @@ div.mat-tab-label {
   background-color:#FFF; 
   width:100%;
   z-index: 900;
-  margin-top: 14px;
+  // margin-top: 14px;
 }
 
 
